@@ -1163,7 +1163,8 @@ it was originally written, Mr. Kornblum was a Special Agent with the
 <a href="http://www.osi.andrews.af.mil/">United States Air Force
 Office of Special Investigations</a> (AFOSI). As such, the program 
 is considered to be a work of the United States Government. Under
-17 USC 105, works of the United States Government are not eligible
+<a href="http://www.law.cornell.edu/uscode/17/105.html">17 USC 105</a>,
+works of the United States Government are not eligible
 for copyright protection.
 
 </p><p>
